[package]
authors = ["Sean Kelleher <ezanmoto@gmail.com>"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]
description = "A tool for pulling project dependencies"
keywords = ["dependencies"]
license = "MIT"
name = "dpnd"
readme = "README.md"
repository = "https://github.com/ezanmoto/dpnd"
version = "0.1.9"

[dependencies]
clap = "2.33.3"
snafu = "0.6.9"

# See <https://crates.io/crates/regex> for more information on this section. The
# most notable reasoning is as follows:
#
# > This crate comes with several features that permit tweaking the trade off
# > between binary size, compilation time and runtime performance.
[dependencies.regex]
version = "1.3.9"
default-features = false
features = ["std"]

[dev-dependencies]
assert_cmd = "1.0.1"
indoc = "1.0.2"
maplit = "1.0.2"
